recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:12: error: value =! is not a member of Int
  } else if (occurences(l,l.head)=!1) {
                                 ^